:bug: More properly fix not showing correct interaction stats

--- a/src/assets/components/_interaction-list.scss
+++ b/src/assets/components/_interaction-list.scss
@@ -1,4 +1,6 @@
 .kimInteractionList {
+  --avatar-size: 50px;
+
   display: grid;
   grid-template-columns: repeat(auto-fit, 3rem);
   gap: var(--space-2);
@@ -6,22 +8,35 @@
   margin-block-end: var(--space-5);
   padding: 0;
   list-style-type: none;
+}
 
-  a {
-    display: block;
-    padding: var(--border-hairline);
-    border: var(--border-hairline) solid var(--color-link);
-    line-height: 0;
-
-    &:hover {
-      border-color: var(--color-link-underline-hover);
-    }
-  }
-
-  img {
-    inline-size: 100%;
+.kimInteractionList_item {
+  &-more {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     aspect-ratio: 1;
-    margin: 0;
-    object-fit: cover;
+    background-color: var(--color-furniture-alt);
+    font-size: var(--size--1);
+    font-weight: bold;
+    font-feature-settings: "tnum";
   }
+}
+
+.kimInteractionList_link {
+  display: block;
+  padding: var(--border-hairline);
+  border: var(--border-hairline) solid var(--color-link);
+  line-height: 0;
+
+  &:hover {
+    border-color: var(--color-link-underline-hover);
+  }
+}
+
+.kimInteractionList_avatar {
+  inline-size: 100%;
+  aspect-ratio: 1;
+  margin: 0;
+  object-fit: cover;
 }
